# pure

./: Cargo.toml  LICENSE  README.md
crates/pure_core/: Cargo.toml
crates/pure_core/src/: expression.rs  lib.rs  structure.rs
examples/: arithmetic.rs
pure_old/examples/: symbols.rs
pure_old/src/: lib.rs
pure_old/src/core/: enums.rs  expression.rs  structure.rs  transformation.rs
pure_old/src/structures/irreducibles/: boolean.rs  integer.rs  symbol.rs
pure_old/src/structures/operations/: mod.rs
pure_old/src/structures/operations/trigonometric/: arccotangent.rs  arctangent.rs  cosecant.rs  cosine.rs  (+5 more)
pure_old/src/transformations/matches/: mod.rs
pure_old/tests/: irreducibles.rs  transformations.rs
src/: lib.rs  prelude.rs
src/core/: enums.rs  expression.rs  mod.rs  structure.rs  transformation.rs
src/structures/: mod.rs
src/structures/irreducibles/: boolean.rs  integer.rs  mod.rs  symbol.rs
src/structures/operations/: mod.rs
src/structures/operations/arithmetic/: addition.rs  division.rs  mod.rs  multiplication.rs  subtraction.rs
src/structures/operations/trigonometric/: arccosecant.rs  arccosine.rs  arccotangent.rs  arcsecant.rs  arcsine.rs  arctangent.rs  cosecant.rs  cosine.rs  cotangent.rs  mod.rs  secant.rs  sine.rs  tangent.rs
src/transformations/: helpers.rs  matches.rs  matches_old.rs  mod.rs  rules.rs
src/transformations/matches/: algebraic.rs  mod.rs
src/transformations/transformations/: algebraic.rs  arithmetic.rs  mod.rs  trigonometric.rs
tests/: arithmetic_operations.rs  core.rs  irreducibles.rs  transformations.rs
